--- a/cadastro.html
+++ b/cadastro.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Cadastro de Endereço</title>
+    <title>cadastro e endereço</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='cadastro.css'>
-    <script src='main.js'></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
+
 <body>
-    
-                <div class="container">
-                    <h1>Cadastro de Endereço</h1>
-                    <label for="">logradouro:</label>
-                    <input type="text" id="nomeUser" class="form-control"><br>
 
-                    <label for="">bairro:</label>
-                    <input type="text" id="nomeUser" class="form-control"><br>
-
-                    <label for="">localidade:</label>
-                    <input type="text" id="nomeUser" class="form-control"><br>
-
-                    <label for="">uf:</label>
-                    <input type="text" id="nomeUser" class="form-control"><br>
-
-
-    
-                        <button type = "button" class="btn btn-succes" onclick="">Enviar</button>
-
+    <div id="cores" class="container">
+        <h1>Cadastro e Endereço</h1>
+        <form action="">
+            <label for="">CEP :</label>
+            <input type="number" id="CEP" class="form-control"><br>
+            <label for="">logradouro :</label>
+            <input type="text" id="logradouro" class="form-control"><br>
+            <label for="">n° :</label>
+            <input type="number" id="numero-casa" class="form-control"><br>
+            <label for="">bairro :</label>
+            <input type="text" id="bairro" class="form-control"><br>
+            <label for="">complemento :</label>
+            <input type="text" id="complemento" class="form-control"><br>
+            <label for="">localidade :</label>
+            <input type="text" id="localidade" class="form-control"><br>
+            <label for="">uf :</label>
+            <input type="text" id="uf" class="form-control"><br>
+            <button type="button" onclick="" class="btn btn-primary">CADASTRAR</button>
+        </form>
+    </div>
+    <script src='cadastro.js'></script>
 </body>
+
 </html>
